--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-#remove html file extension https://spiritaxolotl.github.io/html/test.html
-# to https://spiritaxolotl.github.io/html/test
+#remove html file extension https://spax.zone/html/test.html
+# to https://spax.zone/html/test
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
