more webring structure and submodules for subdomains

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "js/plugins"]
 	path = js/plugins
 	url = https://github.com/SpiritAxolotl/js-plugins
+[submodule "DEP"]
+	path = subdomains/DEP
+	url = https://github.com/SpiritAxolotl/dwellers-empty-path-plus
+	branch = site
+[submodule "random"]
+	path = subdomains/random
+	url = https://github.com/SpiritAxolotl/spax.zone-random
