--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "js/plugins"]
 	path = js/plugins
 	url = https://github.com/SpiritAxolotl/js-plugins
-[submodule "DEP"]
+[submodule "subdomains/DEP"]
 	path = subdomains/DEP
 	url = https://github.com/SpiritAxolotl/dwellers-empty-path-plus
 	branch = site
-[submodule "random"]
+[submodule "subdomains/random"]
 	path = subdomains/random
 	url = https://github.com/SpiritAxolotl/spax.zone-random
