--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "linkedom": "^0.18.5",
     "sass": "^1.79.5",
+    "toad-scheduler": "^3.0.1",
     "vm2": "^3.9.19",
     "xlsx": "^0.18.5"
   }
