discontinuation of the djmax.html

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "spax.zone",
   "version": "1.0.0",
-  "scripts" : { "dev" : "rm -rf ./.build/ && rsync -avq --exclude='.*' --exclude='/node_modules/' . ./.build/ && cd .build/ && ./build.sh" },
+  "scripts": {
+    "dev": "rm -rf ./.build/ && rsync -avq --exclude='.*' --exclude='/node_modules/' . ./.build/ && cd .build/ && ./build.sh"
+  },
   "dependencies": {
     "linkedom": "^0.18.5",
     "sass": "^1.79.5",
     "toad-scheduler": "^3.0.1",
-    "vm2": "^3.9.19",
-    "xlsx": "^0.18.5"
+    "vite": "^6.3.5",
+    "vm2": "^3.9.19"
   }
 }
