Remove vm2 in js-controlled-webrings.js
More VM shenanigans

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "linkedom": "^0.18.5",
     "sass": "^1.79.5",
     "toad-scheduler": "^3.0.1",
-    "vite": "^6.3.5",
-    "vm2": "^3.9.19"
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "chokidar": "^4.0.3",
